--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "leda",
-  "version": "1.4.2",
+  "name": "chili-ui",
+  "version": "0.0.1",
   "description": "UI components library for React applications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
